--- a/strona.html
+++ b/strona.html
@@ -3,7 +3,8 @@
     <head>
         <meta charset="UTF-8">
         <title>nasza pierwsza strona</title>
-        <script src"skrypt.js"></script>
+        <script src"skrypt.js">
+        </script>
     </head>
 
     <body>
